-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 15.0.0
-
None
-
908da97d2 (14.0)
Char user literals loose style in the text editor. Example:
'a' : "String" style applied.
'a'_L1: "Text" style applied.
- mentioned in
-
Page Loading...
| For Gerrit Dashboard: QTCREATORBUG-31342 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 580385,2 | CppEditor: Fix highlighting non-plain character literals | 14.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |