CppEditor: Fix highlighting non-plain character literals

Only string literals were considered so far. Properly consider character
literals as well.

Fixes: QTCREATORBUG-31342
Change-Id: I880546c1384f48ba9f81a6c6716e50fb7781cc11
Reviewed-by: Christian Stenger <christian.stenger@qt.io>